Optimize Barnes-Hut

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 
 [dependencies]
 nalgebra = "0.32.3"
+rayon = "1.8.0"
 
 [dev-dependencies]
 approx = "0.5.1"
@@ -15,6 +16,13 @@ criterion = "0.5.1"
 nalgebra = { version = "0.32.3", features = ["rand"] }
 rand = "0.8.5"
 
+[profile.profiling]
+inherits = "release"
+debug = true
+
 [[bench]]
 name = "benchmark"
 harness = false
+
+[[example]]
+name = "barnes_hut"
