--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ nalgebra = "0.32.3"
 approx = "0.5.1"
 criterion = "0.5.1"
 nalgebra = { version = "0.32.3", features = ["rand"] }
+ptree = "0.4.0"
 rand = "0.8.5"
 
 [profile.profiling]
