--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,12 @@ edition = "2021"
 
 [dependencies]
 nalgebra = "0.32.3"
+num-traits = "0.2.18"
 
 [dev-dependencies]
 approx = "0.5.1"
 criterion = "0.5.1"
 nalgebra = { version = "0.32.3", features = ["rand"] }
-ptree = "0.4.0"
 rand = "0.8.5"
 
 [profile.profiling]
