--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-nalgebra = "0.32.4"
+# nalgebra = "0.32.4"
 num-traits = "0.2.18"
 
 [dev-dependencies]
-approx = "0.5.1"
+approx = { version = "0.5.1", features = ["num-complex"] }
 criterion = "0.5.1"
 nalgebra = { version = "0.32.4", features = ["rand"] }
 rand = "0.8.5"
