--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 [dependencies]
 nalgebra = "0.32.4"
 num-traits = "0.2.18"
+twofloat = "0.7.0"
 
 [dev-dependencies]
 approx = "0.5.1"
